# prose

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  package.json  pyproject.toml
.github/: codecov.yml  release.yml
.github/actions/build-wheel/: action.yml
.github/actions/checkout-prose/: action.yml
.github/actions/download-dist/: action.yml
.github/actions/download-wheels/: action.yml
.github/actions/provision-bun/: action.yml
.github/actions/provision-cargo/: action.yml
.github/actions/provision-uv/: action.yml
.github/actions/setup-toolchain/: action.yml
.github/scripts/: audit-parity.py  cut-draft.py  emit-matrix.py  emit-tag.py  parse-version.py  platforms.toml  summary.py  transform_readme.py
.github/scripts/templates/: ci-summary.md.j2  deploy-summary.md.j2  docs-summary.md.j2  draft-summary.md.j2  release-summary.md.j2
.github/workflows/: check.yml  ci.yml  cut-draft.yml  deploy.yml  draft.yml  release.yml  warm.yml
.mise/: config.toml
.mise/tasks/: audit  bake  build  check  ci  coverage  cruft  format  links  lint  lockfile  og  press  relock  review  site  test  typecheck  upload  wheel
crate/: Cargo.toml  pyproject.toml
crate/src/: lib.rs  main.rs  rule.rs  source.rs  testing.rs  walker.rs
crate/src/cache/: engine.rs  key.rs  mod.rs  records.rs
crate/src/cli/: cache.rs  exit_status.rs  mod.rs  output.rs  rules.rs
crate/src/config/: de.rs  load.rs  load_tests.rs  merge.rs  mod.rs  parse_tests.rs  schema.rs  script.rs  source.rs
crate/src/diagnostics/: github.rs  json.rs  mod.rs  model.rs  sarif.rs  text.rs
crate/src/pipeline/: error.rs  filter.rs  mod.rs
crate/src/primitives/: colon_targets.rs  comments.rs  edit.rs  equal_targets.rs  imports.rs  inline.rs  layout.rs  mod.rs  orderer.rs  params.rs  range.rs  scope.rs  sections.rs  tiering.rs
crate/src/rules/: align_imports.rs  align_match_case.rs  bare_imports.rs  call_layout.rs  docstring_frame.rs  docstring_wrap.rs  group_imports.rs  legacy_union_syntax.rs  mod.rs  reassigned_constants.rs  signature_layout.rs  single_use_variables.rs  step_narration.rs  strip_trailing_commas.rs  unused_future_annotations.rs
crate/src/server/: capabilities.rs  documents.rs
crate/src/suppression/: format_directive.rs  mod.rs  parse_common.rs
crate/tests/: binding_analysis.rs  cli.rs  fixture_tree.rs  integration.rs  site.rs
crate/tests/common/: mod.rs
site/: .oxlintrc.json  astro.config.mjs  astro.config.ts  index.md  knip.ts  lychee.toml  package.json  tsconfig.json  vitest.config.ts
site/.vitepress/: config.ts  env.d.ts
site/.vitepress/data/: build.data.ts  composition.data.ts  directives.data.ts  editor-configs.data.ts  exit-codes.data.ts  fixtures.data.ts  glossary.data.ts  landing-typing-demo.data.ts  landing.data.ts  pipeline.data.ts  primitives-composition.data.ts  primitives.data.ts  rules.data.ts  (+7 more)
site/guide/: ci-integration.md  configuration.md  editor-integration.md  installation.md  quick-start.md  suppression.md  two-stage-pipeline.md
site/integrations/: editor.md  github-actions.md  index.md  pre-commit.md  ruff.md  shell-completions.md
site/primitives/: aligner.md  binding-analysis.md  cache.md  colon-targets.md  docstring.md  edit.md  index.md  orderer.md  pipeline.md  rule-id.md  source.md  suppression-map.md  walker.md
site/reference/: cache.md  cli.md  configuration.md  exit-codes.md  glossary.md  index.md  output-formats.md  pipeline-order.md  suppression-directives.md
site/rules/: align-colons.md  align-comparisons.md  align-equals.md  align-imports.md  align-match-case.md  alphabetize.md  bare-import-allowlist.md  bare-imports.md  blank-lines.md  call-layout.md  collection-layout.md  docstring-expand.md  docstring-frame.md  docstring-wrap.md  import-layout.md  index.md  legacy-union-syntax.md  loose-constants.md  match-case-align.md  multi-line-docstrings.md  no-single-line-docstrings.md  no-step-narration.md  reassigned-constants.md  signature-layout.md  single-use-variables.md  singleton-rule.md  step-narration.md  strip-align-padding.md  strip-trailing-commas.md  unused-future-annotations.md
site/src/: content.config.ts
site/usage/: index.md  installation.md  quick-start.md  suppression.md
src/: cache.rs  cli.rs  config.rs  file_uri.rs  lib.rs  main.rs  pipeline.rs  rule.rs  source.rs  suppression.rs  test_support.rs  testing.rs  walker.rs
src/cache/: engine.rs  key.rs  mod.rs  records.rs
src/cli/: args.rs  cache.rs  exit_status.rs  mod.rs  output.rs  runner.rs
src/config/: de.rs  load.rs  load_tests.rs  mod.rs  overrides.rs  parse_tests.rs  schema.rs  script.rs  source.rs
src/diagnostics/: github.rs  json.rs  mod.rs  model.rs  sarif.rs  text.rs
src/pipeline/: mod.rs
src/primitives/: aligner.rs  binding.rs  call_keywords.rs  colon_targets.rs  comments.rs  docstring.rs  edit.rs  equal_targets.rs  imports.rs  inline.rs  layout.rs  locator.rs  mod.rs  orderer.rs  range.rs  scope.rs
src/rule/: id.rs  mod.rs  registry.rs  slug.rs  trait_.rs
src/rules/: align_colons.rs  align_comparisons.rs  align_equals.rs  align_imports.rs  align_match_case.rs  alphabetize.rs  bare_import_allowlist.rs  bare_imports.rs  blank_lines.rs  call_layout.rs  collection_layout.rs  docstring_expand.rs  docstring_frame.rs  docstring_wrap.rs  import_layout.rs  legacy_union_syntax.rs  loose_constants.rs  match_case_align.rs  mod.rs  multi_line_docstrings.rs  no_single_line_docstrings.rs  no_step_narration.rs  one_per_line_collections.rs  reassigned_constants.rs  shed_parentheses.rs  signature_annotations.rs  signature_layout.rs  single_use_variables.rs  singleton_rule.rs  step_narration.rs  strip_align_padding.rs  strip_none_return.rs  strip_trailing_commas.rs  unsorted_parameters.rs  unused_future_annotations.rs
src/server/: analysis.rs  capabilities.rs  config_cache.rs  conversion.rs  dispatch.rs  documents.rs  mod.rs
src/suppression/: lint_directive.rs  mod.rs  parse_common.rs
tests/: binding_analysis.rs  cli.rs  config_parsing.rs  diagnostics.rs  integration.rs  site.rs
tests/common/: mod.rs
tests/snapshots/: integration__fixtures.snap
(+6361 files in other folders)
