[package]
categories   = ["development-tools"]
description  = "A Python typesetter for the reader."
edition      = "2021"
keywords     = ["formatter", "linter", "python", "style"]
license      = "MIT"
name         = "prose"
readme       = "README.md"
repository   = "https://github.com/Jybbs/prose"
rust-version = "1.82"
version      = "0.1.2"

[dependencies]
annotate-snippets  = "=0.12.13"
anstream           = "1.0"
anyhow             = "1.0"
clap               = { version = "4.5", features = ["derive"] }
clap_complete      = "4.5"
fs-err             = "3"
ignore             = "0.4"
rayon              = "1.10"
ruff_diagnostics   = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10", features = ["serde"] }
ruff_macros        = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10" }
ruff_python_ast    = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10", features = ["serde"] }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10" }
ruff_source_file   = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10", features = ["serde"] }
ruff_text_size     = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10", features = ["serde"] }
serde              = { version = "1.0", features = ["derive"] }
serde-sarif        = "0.8"
serde_ignored      = "0.1"
serde_json         = "1.0"
similar            = "2"
textwrap           = "0.16"
thiserror          = "2.0"
toml               = "0.9"
unicode-width      = "0.2"

[dev-dependencies]
assert_cmd            = "2"
indoc                 = "2"
insta                 = { version = "1.39", features = ["glob", "yaml"] }
proptest              = "1"
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff", tag = "0.15.10" }
tempfile              = "3"

[profile.release]
panic = "abort"
strip = "symbols"
