[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.7,<2.0"]

[project]
authors         = [{ name = "Jibbs" }]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance"
]
description     = "A Python typesetter for the reader."
keywords        = ["formatter", "legibility", "linter", "python", "style"]
license         = { text = "MIT" }
name            = "prose-formatter"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.1"

[project.urls]
Repository = "https://github.com/Jybbs/prose"

[tool.maturin]
bindings = "bin"
strip    = true
